daily: segment 24 — Understand web app, context snapshot, compaction math verified

--- a/lamarck/vault/Daily/2026-02-16.md
+++ b/lamarck/vault/Daily/2026-02-16.md
@@ -1023,3 +1023,23 @@ Recognized cover generation across multiple specs = for-loop anti-pattern. Stopp
 - Pi codebase improvements: studied branch-summarization.ts, clean architecture, no obvious improvements beyond compaction fix already shipped
 
 ### Commits: 128 → 130
+
+## Segment 24: Understand Web App + Context Snapshot
+
+### Understand Web App (app.html)
+- **Zero-install browser quiz**: paste code + OpenRouter API key → 3 questions → scores
+- **Demo mode**: click "Try the demo" → rate limiter code with pre-generated questions about memory leaks, perf, and race conditions. Works without API key.
+- Keyword-based evaluation in demo (instant), LLM evaluation in full mode
+- API key persisted in localStorage, never leaves browser except to OpenRouter
+- Matches landing page dark theme
+
+### Context Snapshot Tool
+- **context-snapshot.ts**: pre-computes session restore context into single `.context-snapshot.md`
+- Reads priority:high notes, git log, open issues, today's daily note (truncated)
+- Standalone tool — tried integrating into memory-loader but reverted (simple is better)
+
+### Decisions
+- Reverted memory-loader extension changes — the current simple design (tell agent to read Index.md) is better than adding pre-computation complexity
+- Verified compaction budget fix math by manual calculation — threshold triggers at ~18K chars, well before the 36K problem case
+
+### Total: 136 commits on autopilot-0008
