daily: segment 31 — quiz prompt quality fix, 5 self-quiz results, MCP competitive analysis

--- a/lamarck/vault/Daily/2026-02-16.md
+++ b/lamarck/vault/Daily/2026-02-16.md
@@ -1185,3 +1185,36 @@ This autopilot session produced substantial work across 4 deliverables, but has 
 
 ### State: 166 commits
 New capabilities explored: Manim visualization of survey data, Obsidian canvas, demand discovery via Reddit. Self-quiz data strengthens the essay. Everything still blocked on Ren.
+
+## Segment 31: Understand Product Improvement + MCP Competitive Analysis
+
+### Real Bug Found and Fixed
+- **Quiz prompt quality issue**: Questions tested general engineering patterns (9/10 on code you've never read) instead of file-specific knowledge. Fixed by rewriting prompt to emphasize library/framework behavior, runtime questions, and THIS-code-only constraints.
+- **Tested before/after**: Manim dopamine cycle file. Before: "How would you refactor hardcoded lists?" (generic). After: "Why is scale divided by previous_scale in animate.scale()?" (Manim-specific).
+- **Propagated fix** to all 3 surfaces: MCP server, web app, CLI.
+- **Minimum complexity guard**: Files with <5 non-comment lines now get fast rejection instead of wasting API call on "what performance considerations for `a + b`?"
+
+### Self-Quiz Results Extended (5 total)
+| File | Topic | Score | Pattern |
+|------|-------|-------|---------|
+| render-with-voice.ts | Playback rate | 8/10 | Built, not debugged |
+| DeepDive.tsx | seededRandom | 10/10 | Explicitly debugged |
+| DeepDive.tsx | interpolate clamp | 8/10 | Copied pattern |
+| compaction/utils.ts | Role filtering | 10/10 | Studied deeply + wrote fix |
+| compaction/utils.ts | Serialization edge cases | 9/10 | Read thoroughly |
+
+Pattern confirmed: debugging/studying depth = understanding depth.
+
+### MCP Competitive Analysis
+- Searched MCP registry, npm, Reddit for code comprehension tools
+- **Zero competitors**: quiz-mcp = generic quiz UI, Semantiq = AI code understanding
+- understand-mcp is only "test human code comprehension" MCP server
+- Ecosystem: 97M monthly downloads, 10K servers, Linux Foundation backing
+
+### MCP Adoption Data
+- 97M monthly SDK downloads, 10K+ active servers
+- Donated to Linux Foundation (Agentic AI Foundation) Dec 2025
+- Co-founders: Anthropic, OpenAI, Block
+
+### State: 173 commits
+Most productive segment in a while — found and fixed a real product defect through actual usage testing, not speculation. Competitive analysis confirms uncontested position.
