daily: segment 35 — MCP publishing research, binary file guard, 188 commits

--- a/lamarck/vault/Daily/2026-02-16.md
+++ b/lamarck/vault/Daily/2026-02-16.md
@@ -1284,3 +1284,24 @@ Fix propagation complete. All Understand surfaces aligned. Now genuinely in dimi
 
 ### State: 183 commits
 Pipeline quality improvements that matter for actual publishing. Audio was below broadcast quality — now fixed.
+
+## Segment 35: Distribution Research + Edge Case Hardening
+
+### MCP Server Publishing Guide
+- Researched full distribution pipeline for MCP servers: npm packaging, auto-config CLI, MCP Registry
+- Key finding: stdio transport dominates, need `bin/cli.js` + `bin/server.js` entry points
+- Saved as vault note `mcp-server-publishing-guide.md` for when Ren approves Understand release
+
+### Understand Hardening
+- Added binary file detection to CLI — checks first 8KB for null bytes before sending to LLM
+- Prevents garbage data when user accidentally passes .png/.wasm/etc.
+
+### Competitive Intelligence
+- CodeMMLU (ArXiv): measures AI code comprehension, not human
+- Swimm, Figstack: "AI explains code to you" — our inverse ("you explain code to AI") remains uncontested
+
+### Image Generation Pipeline
+- Verified working: Gemini Flash Image via OpenRouter, $0.04/image, clean isometric output
+
+### State: 188 commits
+Still genuinely in diminishing returns. Every direction is either blocked on Ren, a for-loop, or product polish. Meaningful frontier work exhausted for this autopilot run.
